--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <label for="comment" class="form-label">Коментарий</label>
               </div>
               <div class="box-checkbox">
-                <label class="label-checkbox">
+                <label class="checkbox-label">
                   <input type="checkbox" name="" id="" class="checkbox" />
-                  <span class="icon-checkbox"> </span>
+                  <span class="checkbox-icon"> </span>
                   Соглашаюсь с рассылкой и принимаю
                   <a href="" class="contract"> Условия договора </a>
                 </label>
