--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <a href="" class="contract"> Условия договора </a>
                 </label>
               </div>
-              <button class="btn-sub" type="submit">Отправить</button>
+              <button class="" type="submit">Отправить</button>
             </form>
           </div>
         </div>
